--- a/views/menu.jade
+++ b/views/menu.jade
@@ -22,3 +22,4 @@ div.menupage
       div Online players: {{players.online.length}}
       div Playing: {{players.playing.length}}
       div Total players: {{players.all.length}}
+img(src="/img/cxcarpurple.png" style="position:relative;width:40%;")
