--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -159,11 +159,7 @@ section.status {
 }
 .highscores .list {
   display: inline-block;
-  margin: 0 auto;
-  margin-left: 100px;
   font-size: 20pt;
-}
-.highscores .list {
   margin: 5px;
 }
 .highscores .list .me {
@@ -191,6 +187,7 @@ section.status {
   background: rgba(255,255,255,0.4);
   border: 1px solid rgba(0,0,0,0.4);
   overflow: hidden;
+  overflow-y: auto;
 }
 .view-animate {
   padding: 15px;
